feat(client): dto 생성 시 불변객체가 아닌 컬렉션으로 생성